@@ -681,3 +681,4 @@ table.insert(tests, "usage_output_streams")
 table.insert(tests, "automate_get_content_changed")
 table.insert(tests, "i18n_commit_messages")
 table.insert(tests, "ws_ops_with_wrong_node_type")
+table.insert(tests, "pivot_root_to_new_dir")
